[gd_scene load_steps=3 format=3 uid="uid://dfpn475c672xp"]

[ext_resource type="Script" path="res://Scenes/QCM_script.gd" id="1_7f1di"]
[ext_resource type="AudioStream" uid="uid://b6upo5qvq7pdr" path="res://Assets/Sounds (UI-Music)/Click.mp3" id="2_duap7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7f1di")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_duap7")
volume_db = -6.242
pitch_scale = 1.87
autoplay = true

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 283.0
offset_right = 985.0
offset_bottom = 491.0
theme_override_font_sizes/font_size = 61

[node name="AnswerButton1" type="Button" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = 630.0
offset_right = 800.0
offset_bottom = 701.0
theme_override_font_sizes/font_size = 20

[node name="AnswerButton2" type="Button" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 711.0
offset_right = 801.0
offset_bottom = 782.0
theme_override_font_sizes/font_size = 20

[node name="AnswerButton3" type="Button" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 805.0
offset_right = 801.0
offset_bottom = 876.0
theme_override_font_sizes/font_size = 20

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 327.0
offset_right = 988.0
offset_bottom = 599.0

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -437.0
offset_top = -813.5
offset_right = 437.0
offset_bottom = 813.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="AnswerButton1" to="." method="_on_answer_button_1_pressed"]
[connection signal="pressed" from="AnswerButton2" to="." method="_on_answer_button_1_pressed"]
[connection signal="pressed" from="AnswerButton3" to="." method="_on_answer_button_1_pressed"]
